--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=e5518eb820dc"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
@@ -31,10 +32,14 @@
     "@types/react": "17.0.43",
     "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.4",
+    "chromatic": "^6.7.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "eslint-plugin-storybook": "^0.6.1",
     "sb": "^6.4.19",
     "typescript": "4.6.3"
-  }
+  },
+  "version": "",
+  "readme": "ERROR: No README data found!",
+  "_id": "my-app@"
 }
