--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "next": "12.1.1",
+    "ramda": "^0.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.5"
@@ -29,6 +30,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "17.0.23",
+    "@types/ramda": "^0.28.15",
     "@types/react": "17.0.43",
     "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.4",
